recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: identifier expected but ':' found.
  avance(25.:Double)
            ^FourSquare:4: error: identifier expected but ':' found.
  droite(90.:Double)
            ^FourSquare:5: error: identifier expected but ':' found.
  avance(25.:Double)
            ^FourSquare:6: error: identifier expected but ':' found.
  droite(90.:Double)
            ^FourSquare:7: error: identifier expected but ':' found.
  avance(25.:Double)
            ^FourSquare:8: error: identifier expected but ':' found.
  droite(90.:Double)
            ^FourSquare:9: error: identifier expected but ':' found.
  avance(25.:Double)
            ^FourSquare:11: error: identifier expected but ':' found.
  recule(25.:Double)
            ^